<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/freebie_9"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/freebie_2">

        <TextView
            android:id="@+id/tv_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/prev_test"
            android:textColor="@color/freebie_0"
            android:textSize="@dimen/material_component_text_module_tips_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/module_sound"
            android:textColor="@color/freebie_0"
            android:textSize="@dimen/material_component_text_title_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin">

        <TextView
            style="@style/module_main_page"
            android:layout_weight="0.1"
            android:text="@string/sound_task_1"
            android:textColor="@color/freebie_6" />

        <ImageView
            style="@style/module_images"
            android:layout_weight="1"
            android:contentDescription="@string/module_face"
            android:src="@drawable/yuyin2" />

        <Button
            android:id="@+id/bt_start"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/start_eva" />

        <Button
            android:id="@+id/bt_skip"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/skip" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.05"
        android:text="4/6"
        android:textColor="@color/freebie_6"
        android:textSize="20sp" />

</LinearLayout>
