<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--title-->
    <TextView
        style="@style/TitleTextStyle"
        android:text="@string/medicine_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/taken_medicine" />

        <ToggleButton
            android:id="@+id/tg_medicine"
            android:layout_width="0dp"
            android:checked="true"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_medicine_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/ContentTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/last_taken_time" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_medicine_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tip"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_med_start"
        style="@style/BtnStyle"
        android:layout_marginBottom="20dp"
        android:text="@string/start" />
</LinearLayout>
