<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/freebie_9"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/freebie_2"
        >
        <TextView
            android:id="@+id/tv_back_to_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/back_to_medicine"
            android:textColor="@color/freebie_0"
            android:textSize="@dimen/material_component_text_module_tips_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/eye_count"
            android:textColor="@color/freebie_0"
            android:textSize="@dimen/material_component_text_title_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin"
        android:layout_weight="1">

        <TextView
            style="@style/module_main_page"
            android:layout_weight="0.1"
            android:text="@string/eye_count_tip" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="iv_memory"
            android:src="@drawable/ic_memory" />

        <Button
            android:id="@+id/bt_count_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            style="@style/PrimaryButton"
            android:gravity="center"
            android:text="@string/start_eva"
            android:textColor="@color/freebie_9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_count_skip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            style="@style/PrimaryButton"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/freebie_9"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/6"
        android:layout_gravity="center"
        android:textColor="@color/freebie_6"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.05"/>

</LinearLayout>
