<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/freebie_9">

    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/freebie_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:text="@string/result_show"
            android:textColor="@color/freebie_0"
            android:textSize="@dimen/material_component_text_title_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingEnd="@dimen/material_layout_keylines_screen_edge_margin"
        android:paddingStart="@dimen/material_layout_keylines_screen_edge_margin">

        <TextView
            android:id="@+id/tv_guide_info"
            style="@style/ContentTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/guide_info" />

        <ListView
            android:id="@+id/lv_test_results"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" />

        <Button
            android:id="@+id/bt_evaluate_self"
            style="@style/BtnStyle"
            android:text="@string/evaluate_self" />
    </LinearLayout>
</LinearLayout>
